--- a/aip.tex
+++ b/aip.tex
@@ -1307,7 +1307,7 @@ for every nonnegative integer $s$.
 \end{theorem}
 
 \begin{proof}
-   The first identity follows from \Cref{cor: iterated lifting,lem: upper bound for higher mu}, while the second follows from \Cref{prop: ineq for higher mus in terminal paths} and the first, together with the fact that $\mu(A_1, \vv{u}_1, p^{e+s}) \le \mu(A_1, \vv{u}_1, p^{e}) p^{s+1}+p^{s+1}-1$, a general fact about these invariants.
+   The first identity follows from \Cref{cor: iterated lifting,lem: upper bound for higher mu}, while the second follows from \Cref{prop: ineq for higher mus in terminal paths} and the first, together with the fact that $\mu(A_1, \vv{u}_1, p^{e+s}) \le \mu(A_1, \vv{u}_1, p^{e}) p^s+p^s-1$, a general fact about these invariants (see \cite[Proposition~2.2]{hernandez+etal.frobenius_examples})
    \pedro{Include in preliminaries?}
 \end{proof}
 
