--- a/preamble.tex
+++ b/preamble.tex
@@ -14,7 +14,7 @@
 \usepackage[mathcal]{euscript}
 \usepackage{mathtools}
 \usepackage{soul}
-%\usepackage{wasysym}
+\usepackage{microtype}
 
 
 %clever ref package 
